--- a/BCEdit180/Editor/Controls/Bytecode/EditorControls/InstructionEditorStyles.xaml
+++ b/BCEdit180/Editor/Controls/Bytecode/EditorControls/InstructionEditorStyles.xaml
@@ -14,7 +14,6 @@
                     xmlns:desc="clr-namespace:BCEdit180.Core.Editor.Classes.Descriptors;assembly=BCEdit180.Core"
                     xmlns:bytecode="clr-namespace:BCEdit180.Core.Editor.Classes.Bytecode;assembly=BCEdit180.Core"
                     mc:Ignorable="d">
-    <converters:TypeDescriptorToStringConverter x:Key="TypeDescriptorConverter"/>
     <!-- Visual studio might give some errors regarding d:DataContext, but i used
          rider to make this file as it's better for writing code. VS for the designer :)
          Some people even say the designer is pointless... i can't express how much i disagree    
@@ -31,7 +30,7 @@
                         <TextBox Foreground="{StaticResource ConstEnum}" Text="{Binding Opcode, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,0,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
                         <TextBox Foreground="{StaticResource FieldName}" Text="{Binding FieldName, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,26,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
                         <TextBox Foreground="{StaticResource ClassName}" Text="{Binding FieldOwner, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,52,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
-                        <TextBox Foreground="{StaticResource FieldDescriptor}" Text="{Binding FieldDescriptor, UpdateSourceTrigger=PropertyChanged, Converter={converters:TypeDescriptorToStringConverter}}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,78,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
+                        <TextBox Foreground="{StaticResource FieldDescriptor}" Text="{Binding FieldDescriptor, UpdateSourceTrigger=PropertyChanged, Converter={x:Static converters:TypeDescriptorToStringConverter.Instance}}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,78,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -82,16 +81,16 @@
                         <TextBlock Width="120" HorizontalAlignment="Left" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5"  FontWeight="Bold" Margin="25,182,0,0"><Run Text="Method Descr"/><Run Text="iptor"/></TextBlock>
                         <TextBox Foreground="{StaticResource ConstEnum}" Text="{Binding Opcode, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,0,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
                         <TextBox Foreground="{StaticResource Keyword}" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,26,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
-                        <TextBox Foreground="{StaticResource MethodDescriptor}" Text="{Binding Descriptor, UpdateSourceTrigger=PropertyChanged, Converter={converters:TypeDescriptorToStringConverter}}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,52,75,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
+                        <TextBox Foreground="{StaticResource MethodDescriptor}" Text="{Binding Descriptor, UpdateSourceTrigger=PropertyChanged, Converter={x:Static converters:TypeDescriptorToStringConverter.Instance}}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,52,75,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
                         <TextBox Foreground="{StaticResource ConstEnum}" Text="{Binding BootstrapReferenceType, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="145,104,75,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
                         <TextBox Foreground="{StaticResource ClassName}" Text="{Binding BootstrapMethodOwner, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="145,130,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
                         <TextBox Foreground="{StaticResource Keyword}" Text="{Binding BootstrapMethodName, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="145,156,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
-                        <TextBox Foreground="{StaticResource MethodDescriptor}" Text="{Binding BootstrapMethodDescriptor, UpdateSourceTrigger=PropertyChanged, Converter={converters:TypeDescriptorToStringConverter}}" TextWrapping="NoWrap" Background="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Top" Padding="5" Margin="145,182,75,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" MaxWidth="400"/>
+                        <TextBox Foreground="{StaticResource MethodDescriptor}" Text="{Binding BootstrapMethodDescriptor, UpdateSourceTrigger=PropertyChanged, Converter={x:Static converters:TypeDescriptorToStringConverter.Instance}}" TextWrapping="NoWrap" Background="Transparent" HorizontalAlignment="Stretch" VerticalAlignment="Top" Padding="5" Margin="145,182,75,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic"/>
                         <TextBlock Width="152" HorizontalAlignment="Left" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5"  FontWeight="Bold" Margin="0,208,0,0"><Run Text="Bootstrap "/><Run Text="Method Arg"/><Run Text="s:"/></TextBlock>
                         <ListBox ItemsSource="{Binding BootstrapMethodArgs}" 
                                  Background="Transparent"
                                  Margin="0,234,0,0"
-                                 Padding="1 1 1 1"
+                                 Padding="1"
                                  ScrollViewer.CanContentScroll="False"
                                  attachedProperties:HorizontalScrolling.UseHorizontalScrolling="True"
                                  ScrollViewer.HorizontalScrollBarVisibility="Auto"
@@ -222,7 +221,7 @@
                         <TextBox Foreground="{StaticResource ConstEnum}" Text="{Binding Opcode, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,0,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
                         <TextBox  Foreground="{StaticResource Keyword}" Text="{Binding MethodName, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,26,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
                         <TextBox  Foreground="{StaticResource ClassName}" Text="{Binding MethodOwner, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,52,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
-                        <TextBox  Foreground="{StaticResource MethodDescriptor}" Text="{Binding MethodDescriptor, UpdateSourceTrigger=PropertyChanged, Converter={converters:TypeDescriptorToStringConverter}}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,78,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
+                        <TextBox  Foreground="{StaticResource MethodDescriptor}" Text="{Binding MethodDescriptor, UpdateSourceTrigger=PropertyChanged, Converter={x:Static converters:TypeDescriptorToStringConverter.Instance}}" Background="Transparent" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,78,0,0" BorderThickness="0"  FontWeight="Bold" FontStyle="Italic" />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
