--- a/BCEdit180/Editor/Controls/Bytecode/InstructionControlStyles.xaml
+++ b/BCEdit180/Editor/Controls/Bytecode/InstructionControlStyles.xaml
@@ -25,15 +25,32 @@
             <Setter.Value>
                 <ControlTemplate>
                     <StackPanel Orientation="Horizontal" d:DataContext="{d:DesignInstance vms:FieldInstructionViewModel}">
-                        <TextBlock Text="{Binding Opcode, UpdateSourceTrigger=PropertyChanged}" Foreground="{Binding OpcodeTextBrush, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type editors:BaseInstructionControl}}}" Padding="0 0 5 0" VerticalAlignment="Center" ToolTip="The field instruction">
-                            <TextBlock.InputBindings>
-                                <MouseBinding MouseAction="LeftDoubleClick"  Command="{Binding EditOpcodeCommand}"/>
-                            </TextBlock.InputBindings>
+                        <!-- Maybe using Run is faster than multiple text blocks? Runs also seem to have built in padding which isn't great -->
+                        <TextBlock>
+                            <Run Text="{Binding Opcode, UpdateSourceTrigger=PropertyChanged}" Foreground="{Binding OpcodeTextBrush, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type editors:BaseInstructionControl}}}" ToolTip="The field instruction">
+                                <Run.InputBindings>
+                                    <MouseBinding MouseAction="LeftDoubleClick"  Command="{Binding EditOpcodeCommand}"/>
+                                </Run.InputBindings>
+                            </Run>
+                            <Run Text="{Binding FieldOwner, UpdateSourceTrigger=PropertyChanged}" Foreground="{StaticResource ClassName}" ToolTip="The class that owns this field">
+                                <Run.InputBindings>
+                                    <MouseBinding MouseAction="LeftDoubleClick"  Command="{Binding EditOpcodeCommand}"/>
+                                </Run.InputBindings>
+                            </Run>
                         </TextBlock>
-                        <TextBlock Text="{Binding FieldOwner, UpdateSourceTrigger=PropertyChanged}" Foreground="{StaticResource ClassName}" Padding="0 0 0 0" VerticalAlignment="Center" ToolTip="The class that owns this field"/>
                         <TextBlock Text="." Padding="0" VerticalAlignment="Center"/>
-                        <TextBlock Text="{Binding FieldName, UpdateSourceTrigger=PropertyChanged}" Foreground="{StaticResource FieldName}" Padding="0 0 5 0" VerticalAlignment="Center" ToolTip="The name of the field"/>
-                        <TextBlock Text="{Binding FieldDescriptor, UpdateSourceTrigger=PropertyChanged, Converter={converters:TypeDescriptorToStringConverter}}" Foreground="{StaticResource FieldDescriptor}" Padding="0 0 0 0" VerticalAlignment="Center" ToolTip="The descriptor of the type that this field holds"/>
+                        <TextBlock>
+                            <Run Text="{Binding FieldName, UpdateSourceTrigger=PropertyChanged}" Foreground="{StaticResource FieldName}" ToolTip="The name of the field">
+                                <Run.InputBindings>
+                                    <MouseBinding MouseAction="LeftDoubleClick"  Command="{Binding EditOpcodeCommand}"/>
+                                </Run.InputBindings>
+                            </Run>
+                            <Run Text="{Binding FieldDescriptor, UpdateSourceTrigger=PropertyChanged, Converter={x:Static converters:TypeDescriptorToStringConverter.Instance}}" Foreground="{StaticResource FieldDescriptor}" ToolTip="The descriptor of the type that this field holds">
+                                <Run.InputBindings>
+                                    <MouseBinding MouseAction="LeftDoubleClick"  Command="{Binding EditOpcodeCommand}"/>
+                                </Run.InputBindings>
+                            </Run>
+                        </TextBlock>
                     </StackPanel>
                 </ControlTemplate>
             </Setter.Value>
