--- a/BCEdit180/Editor/Controls/Descs/TypeDescEditorWindow.xaml
+++ b/BCEdit180/Editor/Controls/Descs/TypeDescEditorWindow.xaml
@@ -29,7 +29,7 @@
             <GroupBox Background="{DynamicResource ABrush.Tone2.Background.Static}" Style="{StaticResource SquaredGroupBox}" IsEnabled="{Binding AllowClass, UpdateSourceTrigger=PropertyChanged}">
                 <GroupBox.Header>
                     <Grid>
-                        <RadioButton x:Name="ObjectRadioButton" Width="100" Content="Object Type" GroupName="TypeSelector" IsChecked="{Binding IsObject, UpdateSourceTrigger=PropertyChanged}"/>
+                        <RadioButton x:Name="ObjectRadioButton" Margin="2,0" Content="Object Type" GroupName="TypeSelector" IsChecked="{Binding IsObject, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
                 </GroupBox.Header>
                 <Grid IsEnabled="{Binding ElementName=ObjectRadioButton, Path=IsChecked, UpdateSourceTrigger=PropertyChanged}">
@@ -40,24 +40,24 @@
                     <Label Padding="3" VerticalAlignment="Top" Height="24" VerticalContentAlignment="Center" Margin="0,48,0,0" HorizontalAlignment="Left" Width="85">
                         <TextBlock Text="Internal Name:"/>
                     </Label>
-                    <TextBox IsReadOnly="True" Text="{Binding PreviewInternalName, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Padding="3" Margin="85,49,0,0" Background="Transparent" BorderThickness="0" BorderBrush="Transparent"/>
+                    <TextBox IsReadOnly="True" Text="{Binding PreviewInternalName, Mode=OneWay}" VerticalAlignment="Top" Padding="3" Margin="85,49,0,0" Background="Transparent" BorderThickness="0" BorderBrush="Transparent"/>
                     <Label Padding="3" VerticalAlignment="Top" Height="24" VerticalContentAlignment="Center" Margin="0,72,0,0" HorizontalAlignment="Left" Width="85">
                         <TextBlock Text="Descriptor:"/>
                     </Label>
-                    <TextBox IsReadOnly="True" Text="{Binding PreviewDescriptor, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Padding="3" Margin="85,73,0,0" Background="Transparent" BorderThickness="0" BorderBrush="Transparent"/>
+                    <TextBox IsReadOnly="True" Text="{Binding PreviewDescriptor, Mode=OneWay}" VerticalAlignment="Top" Padding="3" Margin="85,73,0,0" Background="Transparent" BorderThickness="0" BorderBrush="Transparent"/>
                     <Label Padding="3" VerticalAlignment="Top" Height="24" VerticalContentAlignment="Center" Margin="0,95,0,0" HorizontalAlignment="Left" Width="85">
                         <TextBlock Text="Class Name:"/>
                     </Label>
-                    <TextBox IsReadOnly="True" Text="{Binding PreviewClassName, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Padding="3" Margin="85,96,0,0" Background="Transparent" BorderThickness="0" BorderBrush="Transparent"/>
+                    <TextBox IsReadOnly="True" Text="{Binding PreviewClassName, Mode=OneWay}" VerticalAlignment="Top" Padding="3" Margin="85,96,0,0" Background="Transparent" BorderThickness="0" BorderBrush="Transparent"/>
                 </Grid>
             </GroupBox>
             <GroupBox Grid.Row="2" Background="{DynamicResource ABrush.Tone2.Background.Static}" Style="{StaticResource SquaredGroupBox}" IsEnabled="{Binding AllowPrimitive, UpdateSourceTrigger=PropertyChanged}">
                 <GroupBox.Header>
                     <Grid>
-                        <RadioButton x:Name="PrimitiveRadioButton" Width="100" Content="Primitive Type" GroupName="TypeSelector" IsChecked="{Binding IsPrimitive, UpdateSourceTrigger=PropertyChanged}"/>
+                        <RadioButton x:Name="PrimitiveRadioButton" Margin="2,0" Content="Primitive Type" GroupName="TypeSelector" IsChecked="{Binding IsPrimitive, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
                 </GroupBox.Header>
-                <Grid IsEnabled="{Binding ElementName=PrimitiveRadioButton, Path=IsChecked, UpdateSourceTrigger=PropertyChanged}">
+                <Grid IsEnabled="{Binding ElementName=PrimitiveRadioButton, Path=IsChecked, UpdateSourceTrigger=PropertyChanged}" Margin="5,5,0,2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
