--- a/BCEdit180/Editor/Controls/InfoControlStyle.xaml
+++ b/BCEdit180/Editor/Controls/InfoControlStyle.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:BCEdit180.Controls" 
-                    xmlns:converters="clr-namespace:BCEdit180.Converters"
+                    xmlns:c="clr-namespace:BCEdit180.Converters"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:anc="clr-namespace:BCEdit180.Core.Editor.Classes.Annotations;assembly=BCEdit180.Core"
@@ -17,8 +17,8 @@
             <Setter.Value>
                 <ControlTemplate>
                     <DockPanel d:DataContext="{d:DesignInstance methods:MethodViewModel}">
-                        <TextBlock DockPanel.Dock="Left" Text="*" Visibility="{Binding IsCreatedRuntime, Converter={x:Static converters:BoolToVisibilityConverter.BoolToVisibleOrCollapsed}}"/>
-                        <Label  DockPanel.Dock="Right" Visibility="{Binding IsDeprecated, Converter={x:Static converters:BoolToVisibilityConverter.BoolToVisibleOrCollapsed}}" HorizontalContentAlignment="Center" Content="Deprecated" FontStyle="Italic" Background="#7FDE0707" Padding="0 2" Foreground="#FFE0E0E0"/>
+                        <TextBlock DockPanel.Dock="Left" Text="*" Visibility="{Binding IsCreatedRuntime, Converter={x:Static c:BoolToVisibilityConverter.BoolToVisibleOrCollapsed}}"/>
+                        <Label  DockPanel.Dock="Right" Visibility="{Binding IsDeprecated, Converter={x:Static c:BoolToVisibilityConverter.BoolToVisibleOrCollapsed}}" HorizontalContentAlignment="Center" Content="Deprecated" FontStyle="Italic" Background="#7FDE0707" Padding="0 2" Foreground="#FFE0E0E0"/>
                         <TextBlock Padding="2,1" Text="{Binding MethodName}" FontSize="14" FontFamily="Consolas"/>
                     </DockPanel>
                 </ControlTemplate>
@@ -31,8 +31,8 @@
             <Setter.Value>
                 <ControlTemplate>
                     <DockPanel d:DataContext="{d:DesignInstance fields:FieldViewModel}">
-                        <TextBlock DockPanel.Dock="Left" Text="*" Visibility="{Binding IsCreatedRuntime, Converter={x:Static converters:BoolToVisibilityConverter.BoolToVisibleOrCollapsed}}"/>
-                        <Label  DockPanel.Dock="Right" Visibility="{Binding IsDeprecated, Converter={x:Static converters:BoolToVisibilityConverter.BoolToVisibleOrCollapsed}}" HorizontalContentAlignment="Center" Content="Deprecated" FontStyle="Italic" Background="#7FDE0707" Padding="0 2" Foreground="#FFE0E0E0"/>
+                        <TextBlock DockPanel.Dock="Left" Text="*" Visibility="{Binding IsCreatedRuntime, Converter={x:Static c:BoolToVisibilityConverter.BoolToVisibleOrCollapsed}}"/>
+                        <Label  DockPanel.Dock="Right" Visibility="{Binding IsDeprecated, Converter={x:Static c:BoolToVisibilityConverter.BoolToVisibleOrCollapsed}}" HorizontalContentAlignment="Center" Content="Deprecated" FontStyle="Italic" Background="#7FDE0707" Padding="0 2" Foreground="#FFE0E0E0"/>
                         <TextBlock Padding="2,1" Text="{Binding FieldName}" FontSize="14" FontFamily="Consolas"/>
                     </DockPanel>
                 </ControlTemplate>
@@ -45,8 +45,8 @@
             <Setter.Value>
                 <ControlTemplate>
                     <Grid d:DataContext="{d:DesignInstance anc:AnnotationViewModel}">
-                        <TextBox IsReadOnly="True" Text="{Binding PreviewTypeName, UpdateSourceTrigger=PropertyChanged}" Padding="5" Background="Transparent" BorderThickness="0" FontSize="14" FontFamily="Consolas" Height="28" VerticalAlignment="Top"/>
-                        <TextBlock Text="{Binding Entries.Count, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0} entries}" Margin="0,28,0,0" Padding="5 2"/>
+                        <TextBlock Text="{Binding Type.SimpleName}" Padding="5,3" FontSize="14" FontFamily="Consolas" Height="24" VerticalAlignment="Top"/>
+                        <TextBlock Text="{Binding Entries.Count, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0} entries}" Margin="0,21,0,0" Padding="5,2"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -83,49 +83,91 @@
                             </ListBox.ItemTemplate>
                         </ListBox>
                         <Border BorderThickness="0" Grid.Column="2" Background="{DynamicResource ABrush.Tone4.Background.Static}" BorderBrush="{DynamicResource ABrush.Tone6.Border.Static}">
-                            <Grid DataContext="{Binding ElementName=AnnotationListBox, Path=SelectedItem}" d:DataContext="{d:DesignInstance anc:AnnotationViewModel}">
-                                <TextBlock Text="Type" Width="100" HorizontalAlignment="Left" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="8,5" FontWeight="Bold"/>
-                                <TextBlock Text="Array Depth" Width="100" HorizontalAlignment="Left" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="8,5" FontWeight="Bold" Margin="0,26,0,0"/>
-                                <TextBlock Text="Size on Stack" Width="100" HorizontalAlignment="Left" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="8,5" FontWeight="Bold" Margin="0,52,0,0"/>
-                                <TextBox Foreground="{DynamicResource ABrush.AccentTone3.Background.Static}" Background="Transparent" Text="{Binding FullTypeName, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,0,0,0" BorderThickness="0"  FontWeight="Bold" FontFamily="Consolas" Height="26"/>
-                                <TextBox Foreground="{DynamicResource ABrush.AccentTone3.Background.Static}" IsReadOnly="True" Background="Transparent" Text="{Binding ArrayDepth, UpdateSourceTrigger=PropertyChanged}"   HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,26,0,0" BorderThickness="0"  FontWeight="Bold" FontFamily="Consolas" Height="26"/>
-                                <TextBox Foreground="{DynamicResource ABrush.AccentTone3.Background.Static}" IsReadOnly="True" Background="Transparent" Text="{Binding SizeOnStack, UpdateSourceTrigger=PropertyChanged}"  HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" Margin="100,52,0,0" BorderThickness="0"  FontWeight="Bold" FontFamily="Consolas" Height="26"/>
-                                <Grid Margin="0,84,0,0">
+                            <Grid Margin="5" DataContext="{Binding ElementName=AnnotationListBox, Path=SelectedItem}" d:DataContext="{d:DesignInstance anc:AnnotationViewModel}">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="5*"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="25"/>
+                                    <RowDefinition Height="5"/>
+                                    <RowDefinition Height="25"/>
+                                    <RowDefinition Height="5"/>
+                                    <RowDefinition Height="25"/>
+                                    <RowDefinition Height="5"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Grid.Row="0" Text="Type" HorizontalAlignment="Left" Padding="5,2" FontWeight="Bold"/>
+                                <TextBlock Grid.Row="2" Text="Array Depth" HorizontalAlignment="Left" Padding="5,2" FontWeight="Bold"/>
+                                <TextBlock Grid.Row="4" Text="Size on Stack" HorizontalAlignment="Left" Padding="5,2" FontWeight="Bold"/>
+                                <TextBox Grid.Column="1" Grid.Row="0" 
+                                         Foreground="{DynamicResource ABrush.AccentTone3.Background.Static}" 
+                                         DataContext="{Binding Type}" Margin="0,0,65,0"
+                                         TextWrapping="NoWrap" Padding="5,2" FontWeight="Bold" FontFamily="Consolas" VerticalContentAlignment="Center"
+                                         Background="Transparent" BorderBrush="{DynamicResource ABrush.Tone5.Border.Static}"
+                                         Text="{Binding TypeDescriptor, UpdateSourceTrigger=PropertyChanged, Converter={x:Static c:TypeDescriptorToStringConverter.Instance}}"/>
+                                <Button Grid.Column="1" Grid.Row="0" 
+                                        Foreground="{DynamicResource ABrush.AccentTone3.Background.Static}" 
+                                        DataContext="{Binding Type}" 
+                                        FontWeight="Bold" FontFamily="Consolas" VerticalContentAlignment="Center" HorizontalAlignment="Right" Width="60"
+                                        Background="Transparent" BorderBrush="{DynamicResource ABrush.Tone5.Border.Static}"
+                                        Content="Edit" Command="{Binding EditFieldDescriptorCommand, Mode=OneTime}"/>
+                                <TextBox Grid.Column="1" Grid.Row="2" IsReadOnly="True" 
+                                         BorderBrush="{DynamicResource ABrush.Tone5.Border.Static}"
+                                         Foreground="{DynamicResource ABrush.AccentTone3.Background.Static}" 
+                                         Text="{Binding Type.ArrayDepth, Mode=OneWay}"
+                                         TextWrapping="NoWrap" Padding="5,2" FontWeight="Bold" FontFamily="Consolas" VerticalContentAlignment="Center"
+                                         Background="Transparent"/>
+                                <TextBox Grid.Column="1" Grid.Row="4" IsReadOnly="True" 
+                                         BorderBrush="{DynamicResource ABrush.Tone5.Border.Static}"
+                                         Foreground="{DynamicResource ABrush.AccentTone3.Background.Static}"  
+                                         Text="{Binding Type.SizeOnStack, Mode=OneWay}"
+                                         TextWrapping="NoWrap" Padding="5,2" FontWeight="Bold" FontFamily="Consolas" VerticalContentAlignment="Center"
+                                         Background="Transparent"/>
+                                <Grid Grid.ColumnSpan="2" Grid.Row="6">
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="25*" MinWidth="100"/>
-                                        <ColumnDefinition Width="1"/>
-                                        <ColumnDefinition Width="75*"/>
+                                        <ColumnDefinition Width="2*" MinWidth="75"/>
+                                        <ColumnDefinition Width="4"/>
+                                        <ColumnDefinition Width="8*"/>
                                     </Grid.ColumnDefinitions>
-                                    <Label Padding="5" VerticalAlignment="Top" HorizontalContentAlignment="Center" BorderThickness="0,1" FontWeight="Bold" BorderBrush="{DynamicResource ABrush.Tone6.Border.Static}" Height="27">
-                                        <TextBlock Text="{Binding Entries.Count, UpdateSourceTrigger=PropertyChanged, StringFormat={}Entries ({0}), Mode=OneWay, FallbackValue=Entries (0)}"/>
-                                    </Label>
-                                    <ListBox x:Name="AnnotationEntryListBox" ItemsSource="{Binding Entries}" BorderThickness="0,0,0,0" BorderBrush="{DynamicResource ABrush.Tone6.Border.Static}" Background="{DynamicResource ABrush.Tone4.Background.Static}" Margin="0,27,0,0">
-                                        <ListBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <controls:DoubleClickEditBox DataContext="{Binding}" Text="{Binding EntryName, UpdateSourceTrigger=PropertyChanged}"/>
-                                            </DataTemplate>
-                                        </ListBox.ItemTemplate>
-                                    </ListBox>
-                                    <Border BorderThickness="0,1,0,0" Grid.Column="2" BorderBrush="{DynamicResource ABrush.Tone6.Border.Static}">
+                                    <GroupBox Grid.Column="0" Style="{DynamicResource SquaredGroupBox}">
+                                        <GroupBox.Header>
+                                            <TextBlock Text="{Binding Entries.Count, UpdateSourceTrigger=PropertyChanged, StringFormat='Entries ({0})', Mode=OneWay, FallbackValue='Entries'}" FontWeight="Bold"/>
+                                        </GroupBox.Header>
+                                        <ListBox x:Name="AnnotationEntryListBox" HorizontalAlignment="Stretch"
+                                                 ItemsSource="{Binding Entries}" BorderThickness="0" 
+                                                 BorderBrush="{DynamicResource ABrush.Tone6.Border.Static}" 
+                                                 Background="Transparent"
+                                                 Margin="-5,0,-5,-5">
+                                            <ListBox.ItemTemplate>
+                                                <DataTemplate>
+                                                    <controls:DoubleClickEditBox DataContext="{Binding}" Text="{Binding EntryName, UpdateSourceTrigger=PropertyChanged}"/>
+                                                </DataTemplate>
+                                            </ListBox.ItemTemplate>
+                                        </ListBox>
+                                    </GroupBox>
+                                    <GroupBox Grid.Column="2" Style="{DynamicResource SquaredGroupBox}">
+                                        <GroupBox.Header>
+                                            <TextBlock Text="Entry Editor" FontWeight="Bold"/>
+                                        </GroupBox.Header>
                                         <Grid DataContext="{Binding ElementName=AnnotationEntryListBox, Path=SelectedItem}" d:DataContext="{d:DesignInstance entries:BaseAnnotationEntryViewModel}">
                                             <TextBlock Text="Element Name" Width="100" HorizontalAlignment="Left" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" FontWeight="Bold"/>
                                             <TextBlock Width="100" HorizontalAlignment="Left" TextWrapping="NoWrap" VerticalAlignment="Top" Padding="5" FontWeight="Bold" Margin="0,26,0,0" Text="Value Tag Type"/>
                                             <TextBox Foreground="{DynamicResource ABrush.AccentTone3.Background.Static}" Background="Transparent" Text="{Binding EntryName, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" VerticalContentAlignment="Center" Padding="5" Margin="100,0,0,0" BorderThickness="0"  FontWeight="Bold" FontFamily="Consolas" Height="26"/>
                                             <TextBox Foreground="{DynamicResource ABrush.AccentTone3.Background.Static}" Background="Transparent" Text="{Binding ValueTag, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" TextWrapping="NoWrap" VerticalAlignment="Top" VerticalContentAlignment="Center" Padding="5" Margin="100,26,0,0" BorderThickness="0"  FontWeight="Bold" FontFamily="Consolas" Height="26"/>
-                                            <ContentPresenter Margin="0,52,0,0">
+                                            <ContentPresenter Margin="0,52,0,0" Content="{Binding}" VerticalAlignment="Top">
                                                 <ContentPresenter.Resources>
                                                     <DataTemplate DataType="{x:Type entries:BooleanValueAnnotationEntryViewModel}">
                                                         <CheckBox Content="{Binding EntryName}" IsChecked="{Binding State}"/>
                                                     </DataTemplate>
                                                     <DataTemplate DataType="{x:Type entries:StringValueAnnotationEntryViewModel}">
-                                                        <CheckBox Content="{Binding EntryName}" IsChecked="{Binding EntryValue}"/>
+                                                        <TextBox Text="{Binding EntryValue, UpdateSourceTrigger=PropertyChanged}"/>
                                                     </DataTemplate>
                                                 </ContentPresenter.Resources>
                                             </ContentPresenter>
                                         </Grid>
-                                    </Border>
-                                    <GridSplitter HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="1" BorderThickness="0" Background="Transparent" Margin="-5,0"/>
-                                    <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Grid.Column="1" BorderThickness="0" Background="{DynamicResource ABrush.Tone6.Border.Static}"/>
+                                    </GroupBox>
+                                    <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="-5,0" Background="Transparent" BorderThickness="0"/>
                                 </Grid>
                             </Grid>
                         </Border>
